fix cap_stone
